Add Bun configuration, migrate to Vite, and update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=3005
-REACT_APP_FLOWISE_API_KEY=<your-api-key>
-REACT_APP_FLOWISE_BASE_URL=http://localhost:3000
-REACT_APP_FLOWISE_CHATFLOW_ID=<chatflowid>
+VITE_PORT=3005
+VITE_FLOWISE_API_KEY=your_api_key_here
+VITE_FLOWISE_BASE_URL=https://your_flowise_instance.example.com
+VITE_FLOWISE_CHATFLOW_ID=your_chatflow_id_here
