--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
-    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.78.0",
     "save": "^2.9.0",
@@ -29,12 +28,12 @@
     "ws": "^8.18.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
     "zip": "zip -r realtime-api-console.zip . -x 'node_modules' 'node_modules/*' 'node_modules/**' '.git' '.git/*' '.git/**' '.DS_Store' '*/.DS_Store' 'package-lock.json' '*.zip' '*.tar.gz' '*.tar' '.env'",
-    "relay": "nodemon ./relay-server/index.js"
+    "relay": "bun --watch ./relay-server/index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +57,11 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
-    "nodemon": "^3.1.7"
+    "@vitejs/plugin-react": "^4.2.1",
+    "nodemon": "^3.1.7",
+    "tailwindcss": "^4.0.14",
+    "vite": "^5.1.5",
+    "vite-plugin-svgr": "^4.2.0",
+    "vitest": "^1.2.1"
   }
 }
